# models/contactModel.js
@@ -1,0 +1,11 @@
+const mongoose = require('mongoose');
+
+const contactSchema = new mongoose.Schema({
+    firstName: String,
+    lastName: String,
+    email: String,
+    favoriteColor: String,
+    birthday: Date
+});
+
+module.exports = mongoose.model('Contact', contactSchema);
