# routes/contactsRoutes.js
@@ -2,10 +2,8 @@ const express = require('express');
 const router = express.Router();
 const contactsController = require('../controllers/contactsController');
 
+// Define routes
 router.get('/', contactsController.getAllContacts);
 router.get('/:id', contactsController.getContactById);
-router.post('/', contactsController.createContact);
-router.put('/:id', contactsController.updateContact);
-router.delete('/:id', contactsController.deleteContact);
 
 module.exports = router;
